src/FinancialForce Accounting/objects/codaCreditNote__c.object
<CustomObject>
    <customHelpPage>codahelpcreditnote</customHelpPage>
    <description>Holds information that applies to the whole credit note such as customer account and credit note date.</description>
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <formula>Account__r.CODAAccountTradingCurrency__c</formula>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOutstanding__c</fullName>
        <formula>Transaction__r.AccountOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountTotal__c</fullName>
        <formula>Transaction__r.AccountTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <description>Billing Address.</description>
        <formula>Account__r.BillingStreet + &apos; &apos; + Account__r.BillingCity + &apos; &apos; + Account__r.BillingState + &apos; &apos; + Account__r.BillingPostalCode + &apos; &apos; + Account__r.BillingCountry</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyReference__c</fullName>
        <description>Company Reference</description>
        <formula>OwnerCompany__r.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Account Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CopyDefaultPrintedTextDefinitions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Default Printed Text Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditNoteCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditNoteDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Credit Note Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditNoteDescription__c</fullName>
        <label>Credit Note Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreditNoteRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Credit Note Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditNoteReason__c</fullName>
        <label>Credit Note Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged Goods</fullName>
                </value>
                <value>
                    <fullName>Goods Returned</fullName>
                </value>
                <value>
                    <fullName>Incorrect Shipment</fullName>
                </value>
                <value>
                    <fullName>Overcharge</fullName>
                </value>
                <value>
                    <fullName>Retrospective Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditNoteStatus__c</fullName>
        <label>Credit Note Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ready to Post</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditNoteTotal__c</fullName>
        <formula>NetTotal__c + TaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Credit note currency.</description>
        <formula>CreditNoteCurrency__r.Name</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentOutstandingTotal__c</fullName>
        <description>Credit Note Outstanding.</description>
        <formula>Transaction__r.DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTotal__c</fullName>
        <description>Credit Note Total.</description>
        <formula>Transaction__r.DocumentTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>SalesCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceReference__c</fullName>
        <description>Invoice reference.</description>
        <formula>Invoice__r.Name</formula>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <formula>TEXT(Transaction__r.MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetTotal__c</fullName>
        <label>Net Total</label>
        <summarizedField>codaCreditNoteLineItem__c.NetValue__c</summarizedField>
        <summaryForeignKey>codaCreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity to which this Credit Note is related.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>SalesCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutstandingValue__c</fullName>
        <formula>Transaction__r.DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( CreditNoteStatus__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( Transaction__r.DocumentOutstandingTotal__c == 0, &apos;Paid&apos;,
if( Transaction__r.DocumentTotal__c == Transaction__r.DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrintStatus__c</fullName>
        <label>Print Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Printed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrintedText1AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 1 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedText1Heading__c</fullName>
        <label>Printed Text 1 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText1TextDefinitionName__c</fullName>
        <label>Printed Text 1 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText1Text__c</fullName>
        <label>Printed Text 1 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrintedText2AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 2 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedText2Heading__c</fullName>
        <label>Printed Text 2 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText2TextDefinitionName__c</fullName>
        <label>Printed Text 2 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText2Text__c</fullName>
        <label>Printed Text 2 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrintedText3AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 3 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedText3Heading__c</fullName>
        <label>Printed Text 3 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText3TextDefinitionName__c</fullName>
        <label>Printed Text 3 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText3Text__c</fullName>
        <label>Printed Text 3 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesTaxDocumentCode__c</fullName>
        <label>External tax document code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTaxStatus__c</fullName>
        <description>The current external tax status of the invoice.</description>
        <label>External Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Calculated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <description>Shipping Address.</description>
        <formula>Account__r.ShippingStreet + &apos; &apos; + Account__r.ShippingCity + &apos; &apos; + Account__r.ShippingState + &apos; &apos; + Account__r.ShippingPostalCode + &apos; &apos; + Account__r.ShippingCountry</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>codaCreditNoteLineItem__c.TaxValue1__c</summarizedField>
        <summaryForeignKey>codaCreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>codaCreditNoteLineItem__c.TaxValue2__c</summarizedField>
        <summaryForeignKey>codaCreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>codaCreditNoteLineItem__c.TaxValue3__c</summarizedField>
        <summaryForeignKey>codaCreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Notes (Tax Code)</relationshipLabel>
        <relationshipName>CreditNotesTaxCode1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Notes (Tax Code 2)</relationshipLabel>
        <relationshipName>CreditNotesTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Notes (Tax Code 3)</relationshipLabel>
        <relationshipName>CreditNotesTaxCode3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Sales Credit Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CreditNoteDate__c</columns>
        <columns>Period__c</columns>
        <columns>DueDate__c</columns>
        <columns>CreditNoteCurrency__c</columns>
        <columns>CreditNoteTotal__c</columns>
        <columns>Invoice__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CreditNoteReason__c</columns>
        <columns>PrintStatus__c</columns>
        <columns>CreditNoteStatus__c</columns>
        <columns>DiscardReason__c</columns>
        <columns>OutstandingValue__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCR{000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credit Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>